--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "homepage": "https://github.com/amotivv/n8n-nodes-memory-box",
   "author": {
     "name": "amotivv, inc.",
-    "email": "your.email@example.com"
+    "email": "ai@amotivv.com"
   },
   "repository": {
     "type": "git",
